e6: split sources to support solutions A and B for parts 1 and 2

--- a/06-OCaml/06/bin/dune
+++ b/06-OCaml/06/bin/dune
@@ -1,7 +1,14 @@
 (executable
-	(public_name main)
+	(public_name main-a)
 	(package solution-06)
-	(name main)
-	(modules main)
+	(name main_a)
+	(modules main_a)
+	(libraries solution)
+)
+(executable
+	(public_name main-b)
+	(package solution-06)
+	(name main_b)
+	(modules main_b)
 	(libraries solution)
 )
