--- a/06-OCaml/Makefile
+++ b/06-OCaml/Makefile
@@ -10,12 +10,12 @@ check: test
 clean:
 	dune clean
 
-INPUT = "./input-05.txt"
+INPUT = "./input.txt"
 
 run: all
-	echo "Trying to run solutions to 05."
-	echo "The input code for part 1 is '1'. For part 2 it is '5'."
-	./main.exe $(INPUT)
+	echo "trying to run solutions to 06a, then 06b"
+	./main_a.exe < $(INPUT) && \
+	./main_b.exe < $(INPUT)
 	
 
 .PHONY: check test all clean run
